# zcrpctypegen

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.txt  README.md  build.rs  compare_output.sh
.github/workflows/: typegen-test.yml  zcashrpc-test.yml
json_data/: GenerateResponse.json  GetBlockChainInfoResponse.json  GetInfoResponse.json  ZGetNewAddressResponse.json
output/v4.3.0_0.2.0_0.2.0/: rpc_response_types.rs
output/v4.4.0-a72ecc412_0.2.0_0.3.0/: rpc_response_types.rs
src/: application.rs  client.rs  commands.rs  dmacros.rs  envelope.rs  error.rs  generators.rs  json.rs  lib.rs  main.rs  response_envelope.rs  utils.rs
src/client/: callrpc.rs  defapi.rs  subcomponents.rs  utils.rs
src/commands/: getblockchaininfo.rs  getinfo.rs  start.rs
src/generators/: fieldinterpreters.rs  tokenize.rs  utils.rs
test_data/quizface_output/: getinfo_response.json
test_output/: basic_struct_expected.rs
tests/: compare_output.sh  getinfo.rs  holistic_tests.rs  noarg_smoke.rs  zcashrpc-smoke-tests.rs
tests/data/expected/: deduplication.rs  deduplication_expected.rs  quizface_output.rs  quizface_output_expected.rs  terminal_alias.rs  test_quizface_output.rs  test_terminal_alias.rs  vec_struct.rs  vec_terminal.rs
tests/data/vec_terminal/: VecOfNumber_response.json
zcash-rcli/: Cargo.toml
zcash-rcli/src/: commands.rs
zcash-rcli/tests/: acceptance.rs
zcash_rcli/: Cargo.toml  README.md
zcash_rcli/src/: commands.rs  config.rs
zcash_rcli/src/commands/: version.rs
zcash_rcli/tests/: acceptance.rs
zcashrpc/: Cargo.toml
zcashrpc-macros/: Cargo.toml
zcashrpc-macros/src/: calls.rs  cli_commands.rs  lib.rs  responses.rs  utils.rs
zcashrpc-macros/tests/: validate_io.rs
zcashrpc-typegen/: Cargo.toml  README.md
zcashrpc-typegen/example_dir/: example_file.json
zcashrpc-typegen/output/v4.3.0_0.2.0_0.2.0/: rpc_response_types.rs
zcashrpc-typegen/src/: application.rs  commands.rs  config.rs  error.rs  generators.rs  lib.rs  main.rs  special_cases.rs  tokenize.rs
zcashrpc-typegen/src/commands/: generate.rs  start.rs  version.rs
zcashrpc-typegen/src/generators/: tokenize.rs
zcashrpc-typegen/test_data/basic_struct/: basicstruct.json
zcashrpc-typegen/test_data/deduplication/: z_gettreestate.json
zcashrpc-typegen/test_data/quizface_output/: getaddressdeltas.json  getblockchaininfo.json  getinfo.json
zcashrpc-typegen/test_data/standalone_handling/: getaddressdeltas.json
zcashrpc-typegen/test_data/terminal_alias/: boolAlias.json  numberAlias.json  stringAlias.json
zcashrpc-typegen/test_data/vec_struct/: testdatavec.json
zcashrpc-typegen/test_data/vec_terminal/: VecOfNumber.json  VecOfString.json
zcashrpc-typegen/test_output/: basic_struct.rs  basic_struct_expected.rs  deduplication_expected.rs  quizface_output_expected.rs  standalone_handling_expected.rs  terminal_alias_expected.rs  vec_struct_expected.rs  vec_terminal_expected.rs
zcashrpc-typegen/tests/: acceptance.rs  holistic_tests.rs  hollistic_tests.rs
zcashrpc/src/: client.rs  defapi.rs  envelope.rs  error.rs  json.rs  lib.rs  msg.rs
zcashrpc/src/client/: defapi.rs  envelope.rs
zcashrpc/src/msg/: defapi.rs  defreqresp.rs  request.rs
zcashrpc/tests/: getinfo.rs
