[package]
name = "zcashrpc-macros"
version = "0.1.0"
authors = ["Gygaxis Vainhardt <gygaxis@zingolabs.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0.67", features = [ "full", "parsing", "visit-mut", "extra-traits" ] }
json_typegen = "0.4.1"
zcashrpc-api = { git = "https://github.com/zingolabs/zcashrpc-api.git", branch = "main" }
